--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             padding: 1em 0;
             text-align: center;
         }
+        header h2 {
+            margin: 0.5em 0;
+            font-weight: normal;
+        }
         nav {
             margin: 1em 0;
         }
@@ -45,7 +49,9 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My HTML Pages</h1>
+        <h1>R Workshop</h1>
+        <h2>Bioinformatics Core Facility</h2>
+        <h2>Max Planck Institute for Biology of Ageing</h2>
     </header>
     <nav>
         <button onclick="navigateTo('R_workshop.html')">Day 1</button>
@@ -53,7 +59,7 @@
         <button onclick="navigateTo('deseq2_tutorial.html')">Day 3</button>
         <!-- Add more buttons as needed -->
     </nav>
-    <iframe id="contentFrame" src="page1.html"></iframe>
+    <iframe id="contentFrame" src="R_workshop.html"></iframe>
 
     <script>
         function navigateTo(page) {
